--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+v1.4
+ - Added the Home Site options "Desktop" and "Auto"
+ - Hidden some options when using the desktop site
 v1.3
  - arm64 support
 v1.2
