--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+v1.5
+ - Updated content hub configurations and UI
+ - French translation updates
+ 
 v1.4
  - Added the Home Site options "Desktop" and "Auto"
  - Hidden some options when using the desktop site
