content hub changes

--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,7 @@
 v1.5
  - Updated content hub configurations and UI
  - French translation updates
+ - Created clickable.json
  
 v1.4
  - Added the Home Site options "Desktop" and "Auto"
