--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ v2.1
  - Fixed chromium flags
  - Redesigned crash/sad page and hopefully fixes and make it show
  - Added bottom horizontal swipe gestures for back/forward navigation
+ - Properly handle opening of external sites
 
 v2.0
  - Fixed "Search" from the drawer (Thanks nitanmarcel)
