--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ v2.1
  - Added bottom horizontal swipe gestures for back/forward navigation
  - Properly handle opening of external sites
  - System theme now takes effect without restarting the app (Only works with Suru style)
+ - System theme now takes effect in Material style but needs restarting the app
 
 v2.0
  - Fixed "Search" from the drawer (Thanks nitanmarcel)
