--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,9 @@
+v2.2
+ - Moved web view pull down gesture area to the leftmost and rightmost sides
+ - Minor UI changes
+
 v2.1
+ - Improved performance
  - Fixed chromium flags
  - Redesigned crash/sad page and hopefully fixes and make it show
  - Added bottom horizontal swipe gestures for back/forward navigation
