Adjusted actions links/actions

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ v2.3
  - Focal only release
  - Properly use WebView from Morph.Web instead of directly using from QtWebEngine
  - Fix detection of the new mobile site
+ - Updated links and actions for the new mobile site
 
 v2.2
  - Moved web view pull down gesture area to the leftmost and rightmost sides
