--- a/po/nl.po
+++ b/po/nl.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-01-27 15:56+0000\n"
-"PO-Revision-Date: 2021-02-05 13:53+0100\n"
-"Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
+"PO-Revision-Date: 2024-02-04 13:32+0100\n"
+"Last-Translator: Heimen Stoffels <vistausss@fastmail.com>\n"
 "Language-Team: \n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.4.2\n"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/AboutPage.qml:9
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/Main.qml:401
@@ -35,7 +35,7 @@ msgstr "Ondersteuning"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/AboutPage.qml:72
 msgid "Report a bug"
-msgstr "Meld een bug"
+msgstr "Probleem melden"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/AboutPage.qml:73
 msgid "Contact Developer"
@@ -47,15 +47,15 @@ msgstr "Broncode bekijken"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/AboutPage.qml:75
 msgid "Donate via PayPal"
-msgstr ""
+msgstr "Doneren via PayPal"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/AboutPage.qml:76
 msgid "Donate via LibrePay"
-msgstr ""
+msgstr "Doneren via LibrePay"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/AboutPage.qml:77
 msgid "View in OpenStore"
-msgstr "Openen in OpenStore"
+msgstr "Tonen in OpenStore"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/AboutPage.qml:78
 msgid "Other apps by the developer"
@@ -73,7 +73,7 @@ msgstr "Hoofdontwikkelaar"
 msgid ""
 "Choose an application to open this file or add it to the downloads folder."
 msgstr ""
-"Kies een app om dit bestand in te openen of sla het op in de map 'Downloads'."
+"Kies een app om dit bestand in te openen of sla het op in de downloadmap."
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/ContentDownloadDialog.qml:69
 msgid "Choose an application"
@@ -155,7 +155,6 @@ msgid "More"
 msgstr "Meer"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/Main.qml:400
-#, fuzzy
 msgid "Desktop site"
 msgstr "Volledige website"
 
@@ -212,16 +211,16 @@ msgstr "Nee"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/SadPage.qml:37
 msgid "The rendering process has been closed."
-msgstr ""
+msgstr "Het laden is afgebroken."
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/SadPage.qml:46
 #, qt-format
 msgid "Something went wrong while displaying %1."
-msgstr ""
+msgstr "Er is iets misgegaan tijdens het laden van %1."
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/SadPage.qml:66
 msgid "Close tab"
-msgstr ""
+msgstr "Tabblad sluiten"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/SadPage.qml:79
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/WebViewPage.qml:120
@@ -237,34 +236,32 @@ msgid "This will take effect after you restart the app"
 msgstr "Herstart de app om de wijziging toe te passen"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/SettingsPage.qml:73
-#, fuzzy
 msgid "Auto hide header"
-msgstr "Werkbalk verbergen"
+msgstr "Werkbalk automatisch verbergen"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/SettingsPage.qml:75
 msgid "Disabled"
-msgstr ""
+msgstr "Uitgeschakeld"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/SettingsPage.qml:76
-#, fuzzy
 msgid "On scroll down"
-msgstr "Kop verbergen door omlaag te scrollen"
+msgstr "Door omlaag te scrollen"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/SettingsPage.qml:77
 msgid "Times out"
-msgstr ""
+msgstr "Na tijdspanne"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/SettingsPage.qml:78
 msgid "Always hide"
-msgstr ""
+msgstr "Altijd verbergen"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/SettingsPage.qml:94
 msgid "Use bottom gestures\n"
-msgstr ""
+msgstr "Gebaren aan onderzijde gebruiken\n"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/SettingsPage.qml:95
 msgid "Hover at the top to show header"
-msgstr ""
+msgstr "Veeg over de bovenzijde om de werkbalk te tonen"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/SettingsPage.qml:104
 msgid "Hide site header"
@@ -277,15 +274,15 @@ msgstr "Kop uitklappen door omlaag te vegen"
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/SettingsPage.qml:137
 #, qt-format
 msgid "%1 Swipe up/down and hold to expand"
-msgstr ""
+msgstr "%1 Veeg omhoog/omlaag en houdt ingedrukt om uit te klappen"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/SettingsPage.qml:145
 msgid "Enable haptic feedback"
-msgstr ""
+msgstr "Haptische feedback gebruiken"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/SettingsPage.qml:161
 msgid "Hide bottom hint"
-msgstr ""
+msgstr "Hint aan onderzijde verbergen"
 
 #: /home/kugiigi/Documents/Development/Pesbuk/pesbuk-app/pesbuk/SettingsPage.qml:181
 msgid "Refresh the page to take effect"
